Revert "fix: dropdown menus hidden behind non-scrollable content"
This reverts commit b1f313eed379d0a6cd78a0d785ad5d03c8b1fd08.

--- a/pkg/storaged/storage.scss
+++ b/pkg/storaged/storage.scss
@@ -310,11 +310,3 @@ td.job-action {
 .pf-v6-c-button .pf-v6-c-truncate span {
     text-decoration: var(--pf-v6-c-button--TextDecorationLine) var(--pf-v6-c-button--TextDecorationStyle);
 }
-
-// HACK - https://github.com/patternfly/patternfly-react/issues/11987
-// Allow scrolling if a dropdown menu gets positioned outside the bounds of the window.
-// This is easier to reproduce on 1080p or lower resolutions
-// (see https://bugzilla.redhat.com/show_bug.cgi?id=2388785)
- body:has(#storage) {
-  overflow-y: auto !important;
- }
